--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "poc",
+  "short_name": "PWA",
   "name": "Offline webapp poc",
   "icons": [{
     "src": "/assets/images/icon-512.png",
